# openapi.yaml
@@ -3,16 +3,16 @@
 
 openapi: 3.0.3
 info:
-    title: Greeter API
-    description: The greeting service definition.
+    title: UserInfo API
+    description: The UserInfo service definition.
     version: 0.0.1
 paths:
-    /helloworld/{name}:
+    /userInfo/{name}:
         get:
             tags:
-                - Greeter
-            description: Sends a greeting
-            operationId: Greeter_SayHello
+                - UserInfo
+            description: Sends a UserInfo
+            operationId: UserInfo_SayHello
             parameters:
                 - name: name
                   in: path
@@ -65,4 +65,4 @@ components:
                     description: A list of messages that carry the error details.  There is a common set of message types for APIs to use.
             description: 'The `Status` type defines a logical error model that is suitable for different programming environments, including REST APIs and RPC APIs. It is used by [gRPC](https://github.com/grpc). Each `Status` message contains three pieces of data: error code, error message, and error details. You can find out more about this error model and how to work with it in the [API Design Guide](https://cloud.google.com/apis/design/errors).'
 tags:
-    - name: Greeter
+    - name: UserInfo
